--- a/.github/workflows/push-and-package.yml
+++ b/.github/workflows/push-and-package.yml
@@ -1,7 +1,7 @@
 name: Release Containers
 
 on:
-  # repository_dispatch:
+  #repository_dispatch:
   push:
     tags:
     - 'v*'
@@ -30,6 +30,7 @@ jobs:
       uses: actions/checkout@v1
       
     - name: Push and Package
+      id: push_and_package
       run: |
         # Push images and package
         yarn install
@@ -39,7 +40,11 @@ jobs:
                           --registry-path ${{ secrets.REGISTRY_BASE_PATH }} \
                           --stub-registry ${{ secrets.STUB_REGISTRY }} \
                           --stub-registry-path ${{ secrets.STUB_REGISTRY_BASE_PATH }}
-        
+
+        # Set an output with the resulting package name for upload
+        PKG_PREFIX=$(node -p "require('./package.json').name")
+        echo "::set-output name=package_name::$(ls $PKG_PREFIX-*.tgz)"
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1.0.0
@@ -58,6 +63,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./vscode-dev-containers-${{ steps.get_tag_name.outputs.tag }}.tgz
-        asset_name: vscode-dev-containers-${{ steps.get_tag_name.outputs.tag }}.tgz
+        asset_path: ./${{ steps.push_and_package.outputs.package_name }}
+        asset_name: ${{ steps.push_and_package.outputs.package_name }}
         asset_content_type: application/gzip 
