--- a/.github/workflows/push-dev.yml
+++ b/.github/workflows/push-dev.yml
@@ -30,22 +30,29 @@ jobs:
       uses: actions/checkout@v1
       
     - name: Push "dev", Package, update CG manifest
+      id: push_and_package
       run: |
         # Push dev images and package
         set -e
+
+        yarn install
+
         GIT_BRANCH=$(echo "${{ github.ref }}" | grep -oP 'refs/(heads|tags)/\K(.+)')
         if [ "$GIT_BRANCH" == "" ]; then 
             GIT_BRANCH=master
         fi
-        yarn install
         build/vscdc pack  --release $GIT_BRANCH \
                           --github-repo ${{ github.repository }} \
                           --registry ${{ secrets.REGISTRY }} \
                           --registry-path ${{ secrets.REGISTRY_BASE_PATH }} \
                           --stub-registry ${{ secrets.STUB_REGISTRY }} \
                           --stub-registry-path ${{ secrets.STUB_REGISTRY_BASE_PATH }}
-        mv ./vscode-dev-containers-*.tgz ./vscode-dev-containers-${{ github.sha }}.tgz
-        
+
+        # Set an output with the resulting package name for upload
+        PKG_PREFIX=$(node -p "require('./package.json').name")
+        mv ./$PKG_PREFIX-*.tgz ./$PKG_PREFIX-${{ github.sha }}.tgz
+        echo "::set-output name=package_name::$PKG_PREFIX-${{ github.sha }}.tgz"
+
         # Update CG manifest
         build/vscdc cg --no-build --release $BRANCH --github-repo ${{ github.repository }} --registry ${{ secrets.REGISTRY }} --registry-path ${{ secrets.REGISTRY_BASE_PATH }}
         git config --global user.email "vscr-feedback@microsoft.com"
@@ -58,5 +65,5 @@ jobs:
     - name: Upload Package
       uses: actions/upload-artifact@v1.0.0
       with:
-        name: vscode-dev-containers-${{ github.sha }}.tgz
-        path: ./vscode-dev-containers-${{ github.sha }}.tgz
+        name: ${{ steps.push_and_package.outputs.package_name }}
+        path: ./${{ steps.push_and_package.outputs.package_name }}
